<package format="3">
  <name>hsrb_analytic_ik</name>
  <version>2.1.0</version>
  <description>HSR-B's hybrid inverse kinematics package.
This provides the ik function.</description>
  <maintainer email="xr-hsr-support@mail.toyota.co.jp">HSR Support</maintainer>
  
  <license>BSD 3-clause Clear License</license>

  <author>Koji Terada</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>tmc_robot_kinematics_model</depend>
  <depend>pluginlib</depend>

  <build_depend>eigen</build_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>tmc_manipulation_tests</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>