<package format="3">
  <name>hsrb_planner_plugins</name>
  <version>2.1.0</version>
  <description>HSR-B RRT planner plugin repository</description>
  <maintainer email="xr-hsr-support@mail.toyota.co.jp">HSR Support</maintainer>

  <license>BSD 3-clause Clear License</license>
  <url type="website">None</url>

  <author>Keisuke Takeshita</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>hsr_kinematics</depend>
  <depend>pluginlib</depend>
  <depend>tmc_robot_planner</depend>
  <depend>eigen</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>tmc_manipulation_tests</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>